--- a/blog.html
+++ b/blog.html
@@ -30,14 +30,14 @@
 <body class="bg-bg">
   <div class="container mx-auto">
     <!-- NavBar -->
-     <section>
+     <section class="py-4">
       <div class="navbar bg-base-100 shadow-sm rounded-2xl px-4">
         <div class="flex-1">
           <img src="./assets/logo.png" alt="">
           <a class="btn btn-ghost text-2xl font-bold ">DevBoard</a>
         </div>
         <div class="">
-          <button id="btn-back" class="btn btn-primary btn-ghost">Back To Desk</button>
+          <button id="btn-back" class="btn bg-accent btn-ghost text-white">Back To Desk</button>
             
           
         </div>
@@ -45,6 +45,26 @@
      </section>
      <!-- Blog -->
       <h1 class="text-center text-2xl font-bold m-4">Blogs</h1>
+      <div class="bg-white rounded-2xl p-6 my-4">
+        <p class="font-bold text-xl my-6 border-dashed  border-b-2 ">Question-1: What are the different ways to select an element in the DOM?</p>
+        <p class="text-lg font-medium text-gray-500 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nostrum omnis id a facilis voluptatum quas repellendus dicta dignissimos incidunt minus reiciendis dolore odio! Consectetur quisquam alias repudiandae cum harum?</p>
+      </div>
+      <div class="bg-white rounded-2xl p-6 my-4">
+        <p class="font-bold text-xl my-6 border-dashed  border-b-2 ">Question-2: What is the difference between innerHTML, innerText, and textContent ?</p>
+        <p class="text-lg font-medium text-gray-500 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nostrum omnis id a facilis voluptatum quas repellendus dicta dignissimos incidunt minus reiciendis dolore odio! Consectetur quisquam alias repudiandae cum harum?</p>
+      </div>
+      <div class="bg-white rounded-2xl p-6 my-4">
+        <p class="font-bold text-xl my-6 border-dashed  border-b-2 ">Question-3: What is event delegation in the DOM?</p>
+        <p class="text-lg font-medium text-gray-500 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nostrum omnis id a facilis voluptatum quas repellendus dicta dignissimos incidunt minus reiciendis dolore odio! Consectetur quisquam alias repudiandae cum harum?</p>
+      </div>
+      <div class="bg-white rounded-2xl p-6 my-4">
+        <p class="font-bold text-xl my-6 border-dashed  border-b-2 ">Question-4: What is event bubbling in the DOM?</p>
+        <p class="text-lg font-medium text-gray-500 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nostrum omnis id a facilis voluptatum quas repellendus dicta dignissimos incidunt minus reiciendis dolore odio! Consectetur quisquam alias repudiandae cum harum?</p>
+      </div>
+      <div class="bg-white rounded-2xl p-6 my-4">
+        <p class="font-bold text-xl my-6 border-dashed  border-b-2 ">Question-5: How do you create, add, and remove elements using JavaScript?</p>
+        <p class="text-lg font-medium text-gray-500 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nostrum omnis id a facilis voluptatum quas repellendus dicta dignissimos incidunt minus reiciendis dolore odio! Consectetur quisquam alias repudiandae cum harum?</p>
+      </div>
 
   </div>
 
