--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body class="bg-bg">
   <div class="container mx-auto">
     <!-- NavBar -->
-    <section class="my-6">
+    <section class="py-6">
       <div class="navbar bg-base-100 px-6 rounded-2xl flex justify-between items-center">
         
         <div class="flex items-center gap-4">
