--- a/blog.html
+++ b/blog.html
@@ -47,23 +47,23 @@
       <h1 class="text-center text-2xl font-bold m-4">Blogs</h1>
       <div class="bg-white rounded-2xl p-6 my-4">
         <p class="font-bold text-xl my-6 border-dashed  border-b-2 ">Question-1: What are the different ways to select an element in the DOM?</p>
-        <p class="text-lg font-medium text-gray-500 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nostrum omnis id a facilis voluptatum quas repellendus dicta dignissimos incidunt minus reiciendis dolore odio! Consectetur quisquam alias repudiandae cum harum?</p>
+        <p class="text-lg font-medium text-gray-500 ">We can do it by a lot of ways like using .getElementById and getElementsByClassName</p>
       </div>
       <div class="bg-white rounded-2xl p-6 my-4">
         <p class="font-bold text-xl my-6 border-dashed  border-b-2 ">Question-2: What is the difference between innerHTML, innerText, and textContent ?</p>
-        <p class="text-lg font-medium text-gray-500 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nostrum omnis id a facilis voluptatum quas repellendus dicta dignissimos incidunt minus reiciendis dolore odio! Consectetur quisquam alias repudiandae cum harum?</p>
+        <p class="text-lg font-medium text-gray-500 ">innerText can used to get the inner text of a function and vice versa for innerHTML</p>
       </div>
       <div class="bg-white rounded-2xl p-6 my-4">
         <p class="font-bold text-xl my-6 border-dashed  border-b-2 ">Question-3: What is event delegation in the DOM?</p>
-        <p class="text-lg font-medium text-gray-500 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nostrum omnis id a facilis voluptatum quas repellendus dicta dignissimos incidunt minus reiciendis dolore odio! Consectetur quisquam alias repudiandae cum harum?</p>
+        <p class="text-lg font-medium text-gray-500 ">It is a technique or way to attach a event listener like Addeventlistener to the main element for their child element</p>
       </div>
       <div class="bg-white rounded-2xl p-6 my-4">
         <p class="font-bold text-xl my-6 border-dashed  border-b-2 ">Question-4: What is event bubbling in the DOM?</p>
-        <p class="text-lg font-medium text-gray-500 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nostrum omnis id a facilis voluptatum quas repellendus dicta dignissimos incidunt minus reiciendis dolore odio! Consectetur quisquam alias repudiandae cum harum?</p>
+        <p class="text-lg font-medium text-gray-500 ">It happens when an event is happened on a child element by its parent element</p>
       </div>
       <div class="bg-white rounded-2xl p-6 my-4">
         <p class="font-bold text-xl my-6 border-dashed  border-b-2 ">Question-5: How do you create, add, and remove elements using JavaScript?</p>
-        <p class="text-lg font-medium text-gray-500 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, nostrum omnis id a facilis voluptatum quas repellendus dicta dignissimos incidunt minus reiciendis dolore odio! Consectetur quisquam alias repudiandae cum harum?</p>
+        <p class="text-lg font-medium text-gray-500 ">By createElement, appendChild and remove functions</p>
       </div>
 
   </div>
